added basic implementration of mars, jupiter and saturn

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,9 @@
       <option value="venus">Venus Camera</option>
       <option value="earth">Earth Camera</option>
       <option value="moon">Moon Camera</option>
+      <option value="mars">Mars Camera</option>
+      <option value="jupiter">Jupiter Camera</option>
+      <option value="saturn">Saturn Camera</option>
     </select>
   </body>
 </html>
