refactore for singleton support

--- a/src/index.html
+++ b/src/index.html
@@ -33,15 +33,15 @@
   </head>
   <body>
     <select id="cameraSelector">
-      <option value="default">Default Camera</option>
-      <option value="sun">Sun Camera</option>
-      <option value="mercury">Mercury Camera</option>
-      <option value="venus">Venus Camera</option>
-      <option value="earth">Earth Camera</option>
-      <option value="moon">Moon Camera</option>
-      <option value="mars">Mars Camera</option>
-      <option value="jupiter">Jupiter Camera</option>
-      <option value="saturn">Saturn Camera</option>
+      <option value="Default">Default Camera</option>
+      <option value="Sun">Sun Camera</option>
+      <option value="Mercury">Mercury Camera</option>
+      <option value="Venus">Venus Camera</option>
+      <option value="Earth">Earth Camera</option>
+      <option value="Moon">Moon Camera</option>
+      <option value="Mars">Mars Camera</option>
+      <option value="Jupiter">Jupiter Camera</option>
+      <option value="Saturn">Saturn Camera</option>
     </select>
   </body>
 </html>
