--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,10 @@
       .css-renderer.hidePlanets .planets {
         display: none;
       }
+
+      .object.hide {
+        display:none;
+      }
     </style>
   </head>
   <body>
