--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,14 @@
         position: absolute;
         top: 0;
         right: 0;
+        z-index:4;
       }
 
       #simulationSpeedSlider {
         position: absolute;
         bottom: 0;
         left: 0;
+        z-index:4;
       }
 
       .css-renderer {
@@ -29,6 +31,7 @@
         left: 0;
         right: 0;
         bottom: 0;
+        z-index:3
       }
 
 
@@ -49,6 +52,6 @@
   <body>
     <div id="app"></div>
     <select id="cameraSelector"></select>
-    <input type="range" min="1" max="10000" class="slider" value="50" id="simulationSpeedSlider">
+    <input type="range" min="1" max="1000" class="slider" value="50" id="simulationSpeedSlider">
   </body>
 </html>
