prepare slots for templating

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <div data-slot="right"></div>
       <div data-slot="modal"></div>
       <div data-slot="toast"></div>
+      <div data-slot="sidebar"></div>
     </div>
     <select id="cameraSelector"></select>
     <input
