implemented better sidebar logic

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,18 @@
   </head>
   <body>
     <div id="layout">
+      <!-- Left navigation sidebar (planets). Shares space with the stage on desktop. -->
+      <div id="sidebar-left-root" class="sidebar-root sidebar-left is-closed">
+        <div id="sidebar-left-slot"></div>
+      </div>
+
+      <!-- Stage: canvas + CSS2D overlay + UI overlay -->
       <div id="scene-root">
         <div id="app"></div>
 
         <div id="ui-root">
+          <div data-slot="stage-controls"></div>
           <div data-slot="hud"></div>
-          <div data-slot="left"></div>
           <div data-slot="modal"></div>
           <div data-slot="toast"></div>
         </div>
@@ -20,8 +26,9 @@
         <select id="cameraSelector"></select>
       </div>
 
-      <div id="sidebar-root" class="is-open">
-        <div id="sidebar-slot"></div>
+      <!-- Right information sidebar -->
+      <div id="sidebar-right-root" class="sidebar-root sidebar-right is-open">
+        <div id="sidebar-right-slot"></div>
       </div>
     </div>
   </body>
