--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
 
         <div id="ui-root">
           <div data-slot="stage-controls"></div>
+          <div data-slot="zoom-controls"></div>
           <div data-slot="scene-toggles"></div>
           <div data-slot="hud"></div>
           <div data-slot="modal"></div>
+          <div data-slot="mobile-toggles"></div>
           <div data-slot="toast"></div>
         </div>
       </div>
