bigger ui update

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
           <div data-slot="modal"></div>
           <div data-slot="mobile-toggles"></div>
           <div data-slot="toast"></div>
+          <div data-slot="menu"></div>
         </div>
       </div>
 
