--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solar</title>
+    <meta name="description" content="Interactive solar system simulation (Three.js + TypeScript)." />
+    <title>Solar System</title>
   </head>
   <body>
     <div id="layout">
