preperation vor git ci implementation

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Interactive solar system simulation (Three.js + TypeScript)." />
+    <meta
+      name="description"
+      content="Interactive solar system simulation (Three.js + TypeScript)."
+    />
     <title>Solar System</title>
   </head>
   <body>
