Cinematic Update and Haumea Update

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Interactive solar system simulation (Three.js + TypeScript)."
     />
-    <title>Solar System</title>
+    <title>CMBU - SolarSystem</title>
   </head>
   <body>
     <div id="layout">
